# fireWatcher

./: .gitignore  CMakeLists.txt  README.md  test.cpp
src/: main.cpp
src/core/: FileScanner.cpp  FileScanner.h  JsonIdChecker.cpp  JsonIdChecker.h  LangChecker.cpp  LangChecker.h
